--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -7,7 +7,6 @@
   justify-content: space-between;
   align-items: center;
   background-color: white;
-
   @media (max-width: 1019px) {
     margin-top: 0;
     border-radius: 0 0 20px 20px;
@@ -17,6 +16,9 @@
 .menu {
   @extend %matherial-shadow;
   border-radius: 0 20px 20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
   overflow: auto;
   top: 0px;
@@ -26,7 +28,7 @@
   padding: 20px 0px;
   height: 100%;
   background-color: #f6f6f6;
-  color: #343838;
+  color: rgba(241, 88, 16, 0.801);
   -webkit-transition: all 0.35s cubic-bezier(0.6, 0.05, 0.28, 0.91);
   transition: all 0.35s cubic-bezier(0.6, 0.05, 0.28, 0.91);
   @media (max-width: 768px) {
@@ -52,4 +54,33 @@
     z-index: 4;
     transform: rotate(90deg);
   }
+}
+
+.menu-container {
+  list-style-type: none;
+}
+
+.menu-item {
+  padding: 20px 0;
+  @extend %font-prime;
+  @include font(28px, 28px, bold);
+  text-shadow: 0 0 2px #ccc;
+  letter-spacing: 0.1em;
+  cursor: pointer;
+  @media (max-width: 768px) {
+    @include font(21px, 21px, bold);
+  }
+  @media (max-width: 375px) {
+    @include font(20px, 20px, bold);
+  }
+  &:hover {
+    text-decoration: underline;
+    color: rgba(42, 143, 29, 0.801);
+    transition: all 0.35s cubic-bezier(0.6, 0.05, 0.28, 0.91);
+  }
+}
+
+.item-active {
+  color: rgb(177, 136, 177);
+  text-decoration: underline;
 }
