--- a/src/sass/components/_placeholders.scss
+++ b/src/sass/components/_placeholders.scss
@@ -7,6 +7,16 @@
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
+%shadow-play {
+    border-radius: 20px;
+    box-shadow: inset 0 0 40px rgba(241, 88, 16, 0.801), 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+%shadow-train {
+    border-radius: 20px;
+    box-shadow: inset 0 0 40px rgba(42, 143, 29, 0.801), 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
 %wrapper {
     margin: auto;
     max-width: 1020px;
