--- a/src/sass/components/_base.scss
+++ b/src/sass/components/_base.scss
@@ -35,13 +35,24 @@ body {
 .page-layout {
 	@extend %wrapper;
 	@extend %matherial-shadow;
+	background-color: white;
+	display: flex;
+	flex-direction: column;
 	margin-top: 40px;
-	padding: 40px 35px 40px 35px;
+	padding: 20px 15px 20px 15px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	background-color: white;
-	@media (max-width: 1019px) {
-	  //border-radius: 0 0 20px 20px;
+	@media (max-width: 375px) {
+	  border-radius: 20px 20px 0 0;
 	}
+  }
+
+  .answers {
+	  padding: 10px;
+	  width: 100%;
+	  height: 40px;
+	  display: flex;
+	  justify-content: flex-end;
+	  overflow: hidden;
   }
