--- a/english-for-kids/src/sass/components/_base.scss
+++ b/english-for-kids/src/sass/components/_base.scss
@@ -46,13 +46,29 @@ body {
 	@media (max-width: 375px) {
 	  border-radius: 20px 20px 0 0;
 	}
-  }
+}
 
-  .answers {
-	  padding: 10px;
-	  width: 100%;
-	  height: 40px;
-	  display: flex;
-	  justify-content: flex-end;
-	  overflow: hidden;
-  }
+.answers {
+	padding: 10px;
+	height: 40px;
+	width: 100%;
+	overflow: hidden;
+	display: flex;
+}
+
+  .answers-img {
+	padding: 10px;
+	width: 40px;
+	height: 40px;
+}
+
+.message {
+	padding: 80px;
+	text-align: center;
+	color: #734a9b;
+	@extend %font-prime;
+	@include font(60px, 40px, bold);
+	text-shadow: 0 0 2px #ccc;
+	letter-spacing: 0.1em;
+	cursor: pointer;
+}
