--- a/english-for-kids/src/sass/components/_base.scss
+++ b/english-for-kids/src/sass/components/_base.scss
@@ -49,14 +49,14 @@ body {
 }
 
 .answers {
-	padding: 10px;
 	height: 40px;
 	width: 100%;
 	overflow: hidden;
 	display: flex;
+	flex-direction: row-reverse;
 }
 
-  .answers-img {
+.answers-img {
 	padding: 10px;
 	width: 40px;
 	height: 40px;
